--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   background-image: url("/img/stress.jpg");
+  background-color: #f16634;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center right;
